syntax = "proto3";

package car;

// Go package path - REQUIRED for protoc-gen-go
option go_package = "./proto";

service CarService {
  rpc StreamRaceUpdates(Empty) returns (stream RaceUpdate);
}

message Empty {}

// Static car information - sent once at check-in
message CarInfo {
  string car_id = 1;
  string team = 2;
  float power = 3;      // Engine power (e.g., horsepower or 0-100 scale)
  string color = 4;     // Car color for display
  string driver = 5;    // Driver name
}

// Dynamic car state during race
message CarState {
  string car_id = 1;
  float x = 2;
  float y = 3;
  float heading = 4;    // Direction in degrees (0-360)
  float speed = 5;      // Current speed
  int32 lap = 6;        // Current lap number
  int64 timestamp = 7;
}

// Race status information
message RaceStatus {
  string status = 1;         // "waiting", "racing", "finished"
  int32 total_laps = 2;      // Total laps in race
  int64 race_time = 3;       // Elapsed time in milliseconds
  string leader_car_id = 4;  // Current race leader
}

// Check-in message with all static car information
message CheckIn {
  repeated CarInfo cars = 1;
  int64 timestamp = 2;
}

// Race update message with status and all car positions
message RaceData {
  RaceStatus race_status = 1;
  repeated CarState cars = 2;
  int64 timestamp = 3;
}

// Union message for streaming different types
message RaceUpdate {
  oneof update {
    CheckIn check_in = 1;      // Sent once at connection start
    RaceData race_data = 2;     // Sent continuously during race
  }
}